--- a/force-app/main/default/aura/SitesSearch/SitesSearch.cmp
+++ b/force-app/main/default/aura/SitesSearch/SitesSearch.cmp
@@ -5,7 +5,7 @@
 <aura:component description="SitesSearch" implements="forceCommunity:availableForAllPageTypes"
                 controller="SitesSearchRemote">
     <ltng:require styles="{!join(',', $Resource.rr_community_css, $Resource.proximanova + '/proximanova.css')}"
-                  scripts="{!join(',', $Resource.rr_community_js, $Resource.clamp_js)}"
+                  scripts="{!join(',', $Resource.rr_community_js)}"
                   afterScriptsLoaded="{!c.doInit}"/>
 
     <!-- attributes: -->
