--- a/force-app/main/default/aura/MyReferringClinics/MyReferringClinics.cmp
+++ b/force-app/main/default/aura/MyReferringClinics/MyReferringClinics.cmp
@@ -1,37 +1,39 @@
 <!--Created by D.Yasinskyi on 30.03.2018.-->
-<aura:component controller="MyReferringClinicsController" description="MyReferringClinics" implements="forceCommunity:availableForAllPageTypes">
+<aura:component controller="MyReferringClinicsController" description="MyReferringClinics"
+                implements="forceCommunity:availableForAllPageTypes">
     <ltng:require styles="{!join(',', $Resource.rr_community_css, $Resource.proximanova + '/proximanova.css')}"
                   scripts="{!join(',', $Resource.rr_community_js)}"
                   afterScriptsLoaded="{!c.doInit}"/>
 
     <!--=============================================================================================================-->
-    <aura:attribute name="referringClinics"         type="List"                                       access="private"/>
-    <aura:attribute name="userMode"                 type="String"                                     access="private"/>
-    <aura:attribute name="showSpinner"              type="Boolean" default="true"                     access="private"/>
+    <aura:attribute name="referringClinics" type="List" access="private"/>
+    <aura:attribute name="userMode" type="String" access="private"/>
+    <aura:attribute name="showSpinner" type="Boolean" default="true" access="private"/>
     <!--=============================================================================================================-->
-    <aura:attribute name="showFilterByStudy"        type="Boolean" default="true"                     access="private"/>
-    <aura:attribute name="filteredReferringClinics" type="List"                                       access="private"/>
+    <aura:attribute name="showFilterByStudy" type="Boolean" default="true" access="private"/>
+    <aura:attribute name="filteredReferringClinics" type="List" access="private"/>
     <!--=============================================================================================================-->
-    <aura:attribute name="summaryContainers"        type="List"                                       access="private"/>
-    <aura:attribute name="filterInfo"               type="Object"                                     access="private"/>
-    <aura:attribute name="rpData"               type="Object"                                     access="private"/>
-    <aura:attribute name="studySitesForInvitation"  type="List"                                       access="private"/>
+    <aura:attribute name="summaryContainers" type="List" access="private"/>
+    <aura:attribute name="filterInfo" type="Object" access="private"/>
+    <aura:attribute name="rpData" type="Object" access="private"/>
+    <aura:attribute name="studySitesForInvitation" type="List" access="private"/>
     <!--=============================================================================================================-->
-    <aura:handler name="change"                     value="{!v.filterInfo.isActive}" action="{!c.showPendingPhysicans}"/>
+    <aura:handler name="change" value="{!v.filterInfo.isActive}" action="{!c.showPendingPhysicans}"/>
     <!--=============================================================================================================-->
-    <aura:handler event="c:EventCommunityInitialized"               action="{!c.doInit}"/>
+    <aura:handler event="c:EventCommunityInitialized" action="{!c.doInit}"/>
     <!--=============================================================================================================-->
     <c:RRSpinner size="medium" showSpinner="{!v.showSpinner}" fixed="true"/>
     <!--=============================================================================================================-->
     <aura:if isTrue="{! !v.showSpinner}">
         <div class="mrc-container">
-            <aura:if isTrue="{! v.showFilterByStudy}"> 
+            <aura:if isTrue="{! v.showFilterByStudy}">
                 <c:RRNavigationPath>
                     <c:RRNPathItem label="{!$Label.c.PG_CP_L_My_Referring_Clinics}"/>
                 </c:RRNavigationPath>
                 <div class="rr-summary-panel slds-grid slds-wrap slds-grid_vertical-stretch slds-gutters_medium">
                     <div class="slds-col slds-size_1-of-1 slds-medium-size_3-of-12" style="display: flex">
-                        <c:rrFilterPill number="{!v.filterInfo.value}" title="{!v.filterInfo.label}" isActive="{!v.filterInfo.isActive}"/>
+                        <c:rrFilterPill number="{!v.filterInfo.value}" title="{!v.filterInfo.label}"
+                                        isActive="{!v.filterInfo.isActive}"/>
                     </div>
                     <div class="slds-col slds-size_1-of-1 slds-medium-size_6-of-12">
                         <c:rrSummaryPill summaryContainerList="{!v.summaryContainers}"/>
@@ -41,65 +43,61 @@
                             {!$Label.c.PG_MRC_BTN_Invite_Referring_Provider}
                         </button>
                     </div>
-                <c:Popup aura:id="invite-rp" title="{!$Label.c.PG_MRC_L_Invite_Referring_Provider}" size="medium" showScroll="{!true}">
-                    <div class="rr-form-element">
-                        <div class="slds-grid slds-wrap slds-grid_vertical-align-end">
-                            <div class="rr-form-element slds-col slds-size_7-of-12">
-                                <div class="label">{!$Label.c.PG_MRC_RF_First_Name}</div>
-                                <c:rrInput valueString="{!v.rpData.firstName}" />
-                            </div>
-                            <div class="slds-col slds-size_5-of-12"/>
-                            <div class="rr-form-element slds-col slds-size_7-of-12">
-                                <div class="label">{!$Label.c.PG_MRC_RF_Last_Name}</div>
-                                <c:rrInput valueString="{!v.rpData.lastName}" />
-                            </div>
-                            <div class="slds-col slds-size_5-of-12"/>
-                            <div class="rr-form-element slds-col slds-size_7-of-12">
-                                <div class="label">{!$Label.c.PG_MRC_RF_Clinic_Name}</div>
-                                <c:rrInput valueString="{!v.rpData.clinicName}" />
-                            </div>
-                            <div class="slds-col slds-size_5-of-12"/>
-                            <div class="rr-form-element slds-col slds-size_7-of-12">
-                                <div class="label">{!$Label.c.PG_MRC_RF_Phone}</div>
-                                <c:rrInput valueString="{!v.rpData.phone}" />
-                            </div>
-                            <div class="slds-col slds-size_5-of-12"/>
-                            <aura:if isTrue="{!!empty(v.studySitesForInvitation)}">
-                                <div class="rr-form-element slds-col slds-size_7-of-12">
-                                    <div class="label">{!$Label.c.PG_MRC_RF_Invite_to_Studies}</div>
-                                    <div class="radio-group">
-                                        <aura:iteration items="{!v.studySitesForInvitation}" var="site">
-                                            <lightning:input value="{!site.Id}" type="radio" name="site" label="{!site.StudyName}"
-                                                             onchange="{!c.doSelectStudy}" checked="{!site.selected}"/>
-                                        </aura:iteration>
-                                    </div>
+                    <div class="mrc-invite-popup">
+                        <c:Popup aura:id="invite-rp" title="{!$Label.c.PG_MRC_L_Invite_Referring_Provider}"
+                                 size="small" showScroll="{!true}">
+                            <div class="slds-grid slds-grid_vertical">
+                                <div class="rr-form-element slds-col">
+                                    <div class="label">{!$Label.c.PG_MRC_RF_First_Name}</div>
+                                    <c:rrInput valueString="{!v.rpData.firstName}"/>
                                 </div>
-                                <div class="slds-col slds-size_5-of-12"/>
-                            </aura:if>
-                        </div>
-                    </div>
-                    <aura:set attribute="footerButtons">
-                        <c:RRSpinner aura:id="modalSpinner" size="medium" showSpinner="false"/>
-                        <button class="apollo-btn secondary" onclick="{!c.doClearInviteAndHide}">
-                            {!$Label.c.BTN_Cancel}
-                        </button>
-                        <button class="apollo-btn primary" onclick="{!c.doInviteRP}"
-                                disabled="{!empty(v.rpData.lastName)||empty(v.rpData.firstName)||
+                                <div class="rr-form-element slds-col">
+                                    <div class="label">{!$Label.c.PG_MRC_RF_Last_Name}</div>
+                                    <c:rrInput valueString="{!v.rpData.lastName}"/>
+                                </div>
+                                <div class="rr-form-element slds-col">
+                                    <div class="label">{!$Label.c.PG_MRC_RF_Clinic_Name}</div>
+                                    <c:rrInput valueString="{!v.rpData.clinicName}"/>
+                                </div>
+                                <div class="rr-form-element slds-col">
+                                    <div class="label">{!$Label.c.PG_MRC_RF_Phone}</div>
+                                    <c:rrInput valueString="{!v.rpData.phone}"/>
+                                </div>
+                                <div class="rr-form-element slds-col">
+                                    <aura:if isTrue="{!!empty(v.studySitesForInvitation)}">
+                                        <div class="label">{!$Label.c.PG_MRC_RF_Invite_to_Studies}</div>
+                                        <div class="radio-group">
+                                            <aura:iteration items="{!v.studySitesForInvitation}" var="site">
+                                                <lightning:input value="{!site.Id}" type="radio" name="site"
+                                                                 label="{!site.StudyName}"
+                                                                 onchange="{!c.doSelectStudy}" checked="{!site.selected}"/>
+                                            </aura:iteration>
+                                        </div>
+                                    </aura:if>
+                                </div>
+                            </div>
+                            <aura:set attribute="footerButtons">
+                                <c:RRSpinner aura:id="modalSpinner" size="medium" showSpinner="false"/>
+                                <button class="apollo-btn secondary" onclick="{!c.doClearInviteAndHide}">
+                                    {!$Label.c.BTN_Cancel}
+                                </button>
+                                <button class="apollo-btn primary" onclick="{!c.doInviteRP}"
+                                        disabled="{!empty(v.rpData.lastName)||empty(v.rpData.firstName)||
                                         empty(v.rpData.clinicName)||empty(v.rpData.phone)}"
-                                title="{!(empty(v.rpData.lastName)||empty(v.rpData.firstName)||
+                                        title="{!(empty(v.rpData.lastName)||empty(v.rpData.firstName)||
                                         empty(v.rpData.clinicName)||empty(v.rpData.phone))?$Label.c.PG_MRC_RF_Not_all_Req_Fields:''}">
-                            {!$Label.c.BTN_Invite}
-                        </button>
-                    </aura:set>
-                </c:Popup>
+                                    {!$Label.c.BTN_Invite}
+                                </button>
+                            </aura:set>
+                        </c:Popup>
+                    </div>
                 </div>
             </aura:if>
             <div class="slds-is-relative">
                 <c:RRSpinner aura:id="recordListSpinner" size="medium" showSpinner="false"/>
-                <c:MyReferredZone workspaceWrapper="{!v.filteredReferringClinics}" userMode="{!v.userMode}" showEnrollments="{!v.showFilterByStudy}"/>
+                <c:MyReferredZone workspaceWrapper="{!v.filteredReferringClinics}" userMode="{!v.userMode}"
+                                  showEnrollments="{!v.showFilterByStudy}"/>
             </div>
-
-
         </div>
     </aura:if>
 </aura:component>
