Fix email templates

--- a/force-app/main/default/layouts/Participant_Enrollment__c-Participant Profile Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Participant_Enrollment__c-Participant Profile Layout.layout-meta.xml
@@ -118,10 +118,6 @@
                 <behavior>Edit</behavior>
                 <field>No_Suitable_Site__c</field>
             </layoutItems>
-            <layoutItems>
-                <behavior>Readonly</behavior>
-                <field>Is_Virtual_Study_Site__c</field>
-            </layoutItems>
         </layoutColumns>
         <style>TwoColumnsLeftToRight</style>
     </layoutSections>
@@ -384,7 +380,7 @@
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00h2D000000M2IU</masterLabel>
+        <masterLabel>00h1X000000G9kz</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
