--- a/force-app/main/default/aura/AddPatientByPI/AddPatientByPI.cmp
+++ b/force-app/main/default/aura/AddPatientByPI/AddPatientByPI.cmp
@@ -120,7 +120,7 @@
                     <div class="ap-section-title">{!$Label.c.PG_AP_H_Referral_Information}</div>
                     <div class="slds-grid slds-gutters slds-wrap">
                         <div class="rr-form-element slds-col">
-                            <div class="label"><abbr title="required" class="slds-required">*</abbr>Patient Status</div>
+                            <div class="label"><abbr title="required" class="slds-required">*</abbr>{!$Label.c.PG_AP_F_Patient_Status}</div>
                             <c:rrSelect options="{!v.formData.peStatusLVList}" value="{!v.pe.Participant_Status__c}"
                                         placeholder="{!$Label.c.PG_AC_Select}" required="true"/>
                         </div>
