My Patients and Study Site Picklists translation fix.

--- a/force-app/main/default/aura/MedicalRecordReviewLogItem/MedicalRecordReviewLogItem.css
+++ b/force-app/main/default/aura/MedicalRecordReviewLogItem/MedicalRecordReviewLogItem.css
@@ -12,9 +12,9 @@
     display: flex;
 }
 
-.THIS.mrrli-container .mrrli-buttons button{
-    height: 40px;
-}
+/*.THIS.mrrli-container .mrrli-buttons button{*/
+/*    height: 40px;*/
+/*}*/
 
 .THIS.mrrli-container .mrrli-info .mrrli-info-top > div {
     margin-right: 10px;
