--- a/force-app/main/default/aura/StudyListViewItem/StudyListViewItem.cmp
+++ b/force-app/main/default/aura/StudyListViewItem/StudyListViewItem.cmp
@@ -203,7 +203,7 @@
                                     </div>
                                     <div class="slds-col slds-size_1-of-1 slds-medium-size_3-of-12">
                                         <div class="site-sub-header site-distance">
-                                            {!if(!empty(siteWrapper.siteType),siteWrapper.siteType + ' ' + $Label.c.PG_SFS_L_Site,'')}
+                                            {!if(!empty(siteWrapper.siteTypeLabel),siteWrapper.siteTypeLabel + ' ' + $Label.c.PG_SFS_L_Site,'')}
                                         </div>
                                         <div class="site-sub-header slds-m-topxx-small site-distance">
                                             <aura:unescapedHtml value="{!siteWrapper.formatedDistance}"/>
@@ -263,7 +263,7 @@
                                                             class="apollo-btn tertiary slvi-site-btn"
                                                             style="background-color: white; color: #297DFD; box-shadow: none;"
                                                             onclick="{!c.doMyPatients}">
-                                                        {!siteWrapper.hcpe.Status__c}
+                                                        {!siteWrapper.siteStatusLabel}
                                                     </button>
                                                 </div>
                                             </aura:if>
