--- a/force-app/main/default/aura/MedicalRecordReview/MedicalRecordReview.cmp
+++ b/force-app/main/default/aura/MedicalRecordReview/MedicalRecordReview.cmp
@@ -17,6 +17,7 @@
     <aura:attribute name="showSpinner" type="Boolean" default="true"/>
     <aura:attribute name="resultData" type="String"/>
     <aura:attribute name="actions" type="Object"/>
+    <aura:attribute name="accessUserLevel" type="String"/>
 
     <!-- handlers -->
     <aura:handler name="init" value="{!this}" action="{!c.doInit}"/>
@@ -77,7 +78,9 @@
                         <c:RRIcon iconName="icon-check-circle"/>
                         <div class="main-title">{!v.searchResult.pe.Patient_ID__c}&nbsp;{!$Label.c.PG_MRR_R_Passed}</div>
                         <button class="apollo-btn primary"
-                                onclick="{!c.doReferPatient}">
+                                onclick="{!c.doReferPatient}"
+                                disabled="{!v.accessUserLevel=='Level 2'}"
+                                title="{!v.accessUserLevel=='Level 2'?$Label.c.RSN_Your_permissions_do_not_permit_this_action:''}">
                             {!$Label.c.PG_MRR_BTN_Refer_Patient_to_This_Study}
                             <!--disabled="{!v.actions.referToThisStudy.disabled}"
                                                             title="{!v.actions.referToThisStudy.disableReason}"-->
