--- a/force-app/main/default/aura/StudyListViewItem/StudyListViewItem.cmp
+++ b/force-app/main/default/aura/StudyListViewItem/StudyListViewItem.cmp
@@ -282,7 +282,10 @@
                             </div>
                             <div class="slds-col slds-medium-size_1-of-2 slds-size_1-of-1 slvi-padded-panel-right slvi-header-item ">
                                 <button class="apollo-btn primary slvi-search-site-btn"
-                                        onclick="{!c.navigateToSitesSearch}">{!$Label.c.MyStudy_Find_More_Sites}
+                                        onclick="{!c.navigateToSitesSearch}"
+                                        disabled="{!v.currentStudy.sites[0].actions.refer.disabled}"
+                                        title="{!v.currentStudy.sites[0].actions.refer.disableReason}">
+                                    {!$Label.c.MyStudy_Find_More_Sites}
                                 </button>
                             </div>
                         </div>
