--- a/force-app/main/default/aura/StudyDelegateLevelItem/StudyDelegateLevelItem.css
+++ b/force-app/main/default/aura/StudyDelegateLevelItem/StudyDelegateLevelItem.css
@@ -1,7 +1,7 @@
 /**
  * Created by Kryvolap on 15.09.2018.
  */
-.THIS.sdli-container{
+.THIS.sdli-container.show-study{
     padding-top: 20px;
 }
 
