--- a/force-app/main/default/aura/MyTeamItem/MyTeamItem.css
+++ b/force-app/main/default/aura/MyTeamItem/MyTeamItem.css
@@ -9,6 +9,8 @@
 .THIS.mti-container .mti-email{
     font-size: 13px;
     color: #4A4A4A;
+}
+.THIS.mti-container .mti-email.mti-hcp{
     padding-bottom: 20px;
     border-bottom: 1px solid #D9D9D9;
 }
