--- a/force-app/main/default/aura/NewTeamMember/NewTeamMember.cmp
+++ b/force-app/main/default/aura/NewTeamMember/NewTeamMember.cmp
@@ -22,6 +22,8 @@
     <aura:attribute name="changedLevels" type="List" access="private" default="[]"/>
     <aura:attribute name="changedLevelsAll" type="List" access="private" default="[]"/>
     <aura:attribute name="currentUserContactId" type="String" access="private" default=""/>
+    <aura:attribute name="alreadyExists" type="Boolean" default="false" access="private"/>
+    <aura:attribute name="alreadyExistsTitle" type="String" default="" access="private"/>
 
     <!-- methods: -->
     <aura:method name="refresh" action="{!c.doInit}" access="public"/>
@@ -120,14 +122,16 @@
                             <aura:if isTrue="{!v.isStaff}">
                                 <div class="permissions-panel">
                                     <div class="panel-heading">{!$Label.c.PG_NTM_L_Permissions}</div>
-                                    <c:rrButtonTubSet>
-                                        <aura:if isTrue="{!v.userMode != 'HCP'}">
-                                        <c:rrButtonTubSetItem title="{!$Label.c.PG_NTM_L_Set_By_Study}" tabId="by-study"
-                                                              currentTab="{!v.currentTab}" variant="underlined"/>
-                                        </aura:if>
-                                        <c:rrButtonTubSetItem title="{!$Label.c.PG_NTM_L_Set_Same_For_All_Studies}" tabId="all-same"
-                                                              currentTab="{!v.currentTab}" variant="underlined"/>
-                                    </c:rrButtonTubSet>
+                                    <aura:if isTrue="{!v.userMode != 'HCP'}">
+                                        <c:rrButtonTubSet>
+
+                                            <c:rrButtonTubSetItem title="{!$Label.c.PG_NTM_L_Set_By_Study}" tabId="by-study"
+                                                                  currentTab="{!v.currentTab}" variant="underlined"/>
+                                            <c:rrButtonTubSetItem title="{!$Label.c.PG_NTM_L_Set_Same_For_All_Studies}" tabId="all-same"
+                                                                  currentTab="{!v.currentTab}" variant="underlined"/>
+                                        </c:rrButtonTubSet>
+                                    </aura:if>
+
                                     <div class="permissions-body rr-white-panel">
                                         <div class="{!'by-study-container sdli-container ' + if(v.currentTab == 'by-study','','hidden')}">
                                             <aura:iteration items="{!v.delegate.trialLevels}" var="trialLevel">
@@ -155,18 +159,19 @@
                                     <div class="slds-col slds-size_3-of-5 slds-medium-size_2-of-3 button-container">
                                         <aura:if isTrue="{!v.isStaff}">
                                             <button class="apollo-btn primary ntm-button" onclick="{!c.doSaveChanges}"
-                                                    disabled="{!or(or(or(or(not(v.isCorrectEmail),
-                                                        and(not(v.isCorrectContactData),v.delegate.delegateContact.Id==undefined)),
-                                                        and(v.currentTab=='by-study',empty(v.changedLevels))),
-                                                        and(v.currentTab=='all-same',empty(v.changedLevelsAll))),
-                                                        v.delegate.delegateContact.Id == v.currentUserContactId)
-}"
-                                                    title="{!if(or(or(or(or(not(v.isCorrectEmail),
+                                                    disabled="{!or(or(or(or(or(not(v.isCorrectEmail),
                                                         and(not(v.isCorrectContactData),v.delegate.delegateContact.Id==undefined)),
                                                         and(v.currentTab=='by-study',empty(v.changedLevels))),
                                                         and(v.currentTab=='all-same',empty(v.changedLevelsAll))),
                                                         v.delegate.delegateContact.Id == v.currentUserContactId),
-                                                        $Label.c.PG_NTM_T_Correct_Info,'')}">
+                                                        v.alreadyExists)
+}"
+                                                    title="{!if(v.alreadyExists, v.alreadyExistsTitle,if(or(or(or(or(not(v.isCorrectEmail),
+                                                        and(not(v.isCorrectContactData),v.delegate.delegateContact.Id==undefined)),
+                                                        and(v.currentTab=='by-study',empty(v.changedLevels))),
+                                                        and(v.currentTab=='all-same',empty(v.changedLevelsAll))),
+                                                        v.delegate.delegateContact.Id == v.currentUserContactId),
+                                                        $Label.c.PG_NTM_T_Correct_Info,''))}">
                                                 {!$Label.c.PG_NTM_BTN_Save_Team_Member}
                                             </button>
                                             <aura:set attribute="else">
