--- a/force-app/main/default/aura/StudyVisits/StudyVisits.cmp
+++ b/force-app/main/default/aura/StudyVisits/StudyVisits.cmp
@@ -12,6 +12,12 @@
     <aura:attribute name="initialized" type="Boolean" default="false"/>
 
     <c:RRSpinner aura:id="spinner" size="medium" showSpinner="true" fixed="true"/>
+    <c:RRActionApprove aura:id="popup"
+                       dialogTitle="{!$Label.c.Home_Page_StudyVisit_Btn}"
+                       message="{!$Label.c.StudyVisit_Popup_Text}"
+                       approveBtnName="{!$Label.c.BTN_OK}"
+                       cancelBtnName="{!$Label.c.BTN_Cancel}"/>
+
     <div class="{!'sv-body ' + if(v.initialized, '', 'hidden')}">
         <div class="tt-title">
             {!$Label.c.Home_Page_StudyVisit_Title}
@@ -45,13 +51,4 @@
 
         <c:StudyVisitsLegend/>
     </div>
-
-    <c:Popup aura:id="popup" title=""
-             headerText="{!$Label.c.StudyVisit_Popup_Text}"
-             showClose="false" size="small">
-        <aura:set attribute="footerButtons">
-            <button class="apollo-btn primary" onclick="{!c.onClickOk}">{!$Label.c.BTN_OK}</button>
-        </aura:set>
-    </c:Popup>
-
 </aura:component>
