--- a/force-app/main/default/aura/UpcomingVisitsPreviewPanel/UpcomingVisitsPreviewPanel.cmp
+++ b/force-app/main/default/aura/UpcomingVisitsPreviewPanel/UpcomingVisitsPreviewPanel.cmp
@@ -4,6 +4,12 @@
 
     <aura:attribute name="visits" type="List"/>
 
+    <c:RRActionApprove aura:id="popup"
+                       dialogTitle="{!$Label.c.Home_Page_StudyVisit_Btn}"
+                       message="{!$Label.c.StudyVisit_Popup_Text}"
+                       approveBtnName="{!$Label.c.BTN_OK}"
+                       cancelBtnName="{!$Label.c.BTN_Cancel}"/>
+
     <div class="sv-panel rr-white-panel">
         <c:RRSpinner aura:id="spinner" size="small" showSpinner="true"/>
         <div class="sv-header">
@@ -35,12 +41,4 @@
             <c:RRLink page="study-workspace?tab=tab-visits" label="{!$Label.c.Resources_See_All}"/>
         </div>
     </div>
-
-    <c:Popup aura:id="popup" title=""
-             headerText="{!$Label.c.StudyVisit_Popup_Text}"
-             showClose="false" size="small">
-        <aura:set attribute="footerButtons">
-            <button class="apollo-btn primary" onclick="{!c.onClickOk}">{!$Label.c.BTN_OK}</button>
-        </aura:set>
-    </c:Popup>
 </aura:component>
