--- a/force-app/main/default/aura/MyReferringClinics/MyReferringClinics.cmp
+++ b/force-app/main/default/aura/MyReferringClinics/MyReferringClinics.cmp
@@ -17,8 +17,10 @@
     <aura:attribute name="filterInfo" type="Object" access="private"/>
     <aura:attribute name="rpData" type="Object" access="private"/>
     <aura:attribute name="studySitesForInvitation" type="List" access="private"/>
+    <aura:attribute name="reqFieldsFilled" type="Boolean" default="true"/>
     <!--=============================================================================================================-->
     <aura:handler name="change" value="{!v.filterInfo.isActive}" action="{!c.showPendingPhysicans}"/>
+    <aura:handler name="change" value="{!v.rpData}" action="{!c.checkReqFields}"/>
     <!--=============================================================================================================-->
     <aura:handler event="c:EventCommunityInitialized" action="{!c.doInit}"/>
     <!--=============================================================================================================-->
@@ -82,8 +84,7 @@
                                     {!$Label.c.BTN_Cancel}
                                 </button>
                                 <button class="apollo-btn primary" onclick="{!c.doInviteRP}"
-                                        disabled="{!empty(v.rpData.lastName)||empty(v.rpData.firstName)||
-                                        empty(v.rpData.clinicName)||empty(v.rpData.phone)}"
+                                        disabled="{!v.reqFieldsFilled}"
                                         title="{!(empty(v.rpData.lastName)||empty(v.rpData.firstName)||
                                         empty(v.rpData.clinicName)||empty(v.rpData.phone))?$Label.c.PG_MRC_RF_Not_all_Req_Fields:''}">
                                     {!$Label.c.BTN_Invite}
